Formatting according to GeoTools convetion, cleaned up import
git-svn-id: http://geowebcache.org/svn/trunk@35 e7b91dd5-889a-44ae-8e97-0abfc27e49b2